# GeneVue-Backend

./: .gitignore  Dockerfile  LICENSE_OF_SIDE_PACKAGES  main.py  pyproject.toml
.github/workflows/: package_build_and_publish.yaml  publish.yml  python-publish.yml
src/genevue/: Diagnosis.py  Preprocessing.py  __init__.py  bootstrap.py  cli.py  configure.py  console.py  l10n.py  logsystem.py  main.py
src/genevue/Batch/: __init__.py
src/genevue/Coll/: powercoll.py  suncoll.py
src/genevue/Constants/: AminoAcids.py  __init__.py
src/genevue/Evo/: __init__.py  dnds.py
src/genevue/Evo/Coll/: __init__.py  _corecoll.py  powercoll.py  suncoll.py
src/genevue/Formats/: Expr.py  GFF3.py  __init__.py
src/genevue/GXF/: GFF3tools.py  GFFtools.py  __init__.py
src/genevue/GXF/GFF3/: __init__.py
src/genevue/Genome/: __init__.py  database.py
src/genevue/Parser/: structure.py
src/genevue/Pipelines/: BatchProcess.py  GeneFamilySearch.py  __init__.py
src/genevue/Plot/: ClusterHeatmap.py  CollScatPlot.py  Collinearity.py  pHMM.py
src/genevue/Plot/Features/: __init__.py
src/genevue/Protein/: ProtParam.py  __init__.py
src/genevue/QC/: __init__.py
src/genevue/QC/BUSCO/: Actions.py  Analysis.py  AutoLineage.py  BuscoAnalysis.py  BuscoConfig.py  BuscoDownloadManager.py  BuscoLogger.py  BuscoPlacer.py  BuscoPlot.py  BuscoRunner.py  ConfigManager.py  Exceptions.py  GeneSetAnalysis.py  GenomeAnalysis.py  Toolset.py  TranscriptomeAnalysis.py  __init__.py  augustus.py  base.py  bbtools.py  blast.py  hmmer.py  metaeuk.py  miniprot.py  prodigal.py  run_BUSCO.py  sepp.py
src/genevue/Remote/: BatchEntrez.py  Entrez.py  NCBIDatasetsAPI.py  NCBI_DATASETS_API.py  ProteinAPI.py  __init__.py
src/genevue/Sequences/: FASTA.py  __init__.py
src/genevue/Statistic/: Decompose.py  Regression.py  StatTests.py  __init__.py  _utils.py
src/genevue/Taxonomy/: SimpleTree.py  __init__.py
src/genevue/Tools/: __init__.py  filesystem.py
src/genevue/Tools/completion/: __init__.py
src/genevue/Tools/filesystem/: __init__.py
src/genevue/Utils/: Completion.py  FileSystem.py  Network.py  Parse.py  __init__.py
src/genevue/coll/: powercoll.py  scatplot.py  suncoll.py
src/genevue/constants/: AminoAcids.py
src/genevue/evo/: dnds.py
src/genevue/plot/: Chromosome.py  Coll.py  __init__.py  kaks.py  pHMM.py
src/genevue/protein/: ProtParam.py
src/genevue/sequences/: FASTA.py  __init__.py  _extract.py  combine_and_split.py
src/genevue/tidy/: rename.py
src/genevue/utils/: __init__.py  network.py  parse.py
