[project]
name = "GeneVue"
version = "0.0.2"
description = "Python backend of GeneVue."
authors = [
    { name = "hyli360", email = "lhy2689323523@163.com" }
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "biopython>=1.86",
    "duckdb>=1.5.2",
    "logomaker>=0.8.7",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "pysam>=0.23.3",
    "pyside6>=6.10.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "typer>=0.24.1",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Matplotlib",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mpl", "coverage"]
[[tool.uv.index]]
name = "GeneVue-cli"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
[project.scripts]
genevue = "genevue.main:app"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = """
-ra
--strict-markers
--cov=genevue
--cov-report=term-missing
--cov-branch
--cov-report=xml
--junitxml=junit.xml
-o
junit_family=legacy
--mpl
"""
# Add it if you just want to generate baseline...
# --mpl-generate-path=tests/baseline
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["genevue"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
]
